crates/biome_html_parser/tests/html_specs/ok/svelte/directives/transition_shorthand.svelte
<div transition:fade>Shorthand transition</div>
