crates/biome_html_parser/tests/html_specs/error/svelte/directives/transition_incomplete_params.svelte
<div transition:fade={{ duration: >Incomplete</div>
